src/test/ui/parser/paamayim-nekudotayim.stderr
error: expected identifier, found `;`
  --> $DIR/paamayim-nekudotayim.rs:16:7
   |
LL |     ::; //~ ERROR expected identifier, found `;`
   |       ^ expected identifier

error: aborting due to previous error

